--- a/movix-frontend/src/css/global.css
+++ b/movix-frontend/src/css/global.css
@@ -175,6 +175,7 @@ body, html {
 
 .form-group input {
   width: 100%;
+  box-sizing: border-box;
   padding: 0.875rem 1rem;
   background: var(--bg-hover);
   border: 1px solid var(--border-color);
@@ -196,10 +197,11 @@ body, html {
 
 .password-input {
   position: relative;
+  width: 100%;
 }
 
 .password-input input {
-  padding-right: 40px;
+  padding-right: 20px;
 }
 
 .toggle-password {
